--- a/spring-boot-api-rest/challenge/src/main/resources/messages.properties
+++ b/spring-boot-api-rest/challenge/src/main/resources/messages.properties
@@ -2,7 +2,7 @@ cliente.nombre.null=Name can not be null
 cliente.apellido.null=Lastname can not be null
 cliente.fecha_nac.null=Birthdate can not be null
 cliente.cuit.null=CUIT can not be null
-cliente.cuit.digitos=CUIT must have 11 digist
+cliente.cuit.longitud=CUIT must have 11 digist
 cliente.domicilio.null=Address can not be null
 cliente.celular.null=Phone can not be null
 cliente.email.null=Email can not be null
