--- a/spring-boot-api-rest/challenge/src/main/resources/messages_es.properties
+++ b/spring-boot-api-rest/challenge/src/main/resources/messages_es.properties
@@ -2,7 +2,7 @@ cliente.nombre.null=El nombre no puede ser nulo
 cliente.apellido.null=El apellido no puede ser nulo
 cliente.fecha_nac.null=La fecha de nacimiento no puede ser nula
 cliente.cuit.null=El cuit no puede ser nulo
-cliente.cuit.digitos=El cuit debe tener 11 digitos
+cliente.cuit.longitud=El cuit debe tener 11 digitos
 cliente.domicilio.null=El domicilio no puede ser nulo
 cliente.celular.null=El celular no puede ser nulo
 cliente.email.null=El email no puede ser nulo
