--- a/spring-boot-api-rest/demo/src/main/resources/messages_es.properties
+++ b/spring-boot-api-rest/demo/src/main/resources/messages_es.properties
@@ -1,9 +1,10 @@
 cliente.nombre.null=El nombre no puede ser nulo
 cliente.apellido.null=El apellido no puede ser nulo
 cliente.fecha_nac.null=La fecha de nacimiento no puede ser nula
-cliente.cuit.null=El cuit no puede ser nulo
-cliente.cuit.longitud=El cuit debe tener 11 digitos
+cliente.cuit.null=El CUIT no puede ser nulo
+cliente.cuit.longitud=El CUIT debe tener 11 d\u00EDgitos contando los "-"
+cliente.cuit.format=El formato del CUIT debe ser XX-XXXXXXXX-X y solo valores num\u00E9ricos.
 cliente.domicilio.null=El domicilio no puede ser nulo
 cliente.celular.null=El celular no puede ser nulo
 cliente.email.null=El email no puede ser nulo
-cliente.email.format=Formato incorrecto
+cliente.email.format=Email con formato incorrecto
