--- a/spring-boot-api-rest/demo/src/main/resources/messages.properties
+++ b/spring-boot-api-rest/demo/src/main/resources/messages.properties
@@ -2,7 +2,8 @@ cliente.nombre.null=Name can not be null
 cliente.apellido.null=Lastname can not be null
 cliente.fecha_nac.null=Birthdate can not be null
 cliente.cuit.null=CUIT can not be null
-cliente.cuit.longitud=CUIT must have 11 digist
+cliente.cuit.longitud=CUIT must have 11 digist with the "-"
+cliente.cuit.format=CUIT Format Must Be XX-XXXXXXXX-X and only numbers
 cliente.domicilio.null=Address can not be null
 cliente.celular.null=Phone can not be null
 cliente.email.null=Email can not be null
